generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  ADMIN
  USER
  PREMIUM
}

enum SubscriptionStatus {
  ACTIVE
  EXPIRED
  CANCELLED
}

enum RaffleState {
  DRAFT
  ACTIVE
  FINISHED
  CANCELLED
}

enum RaffleType {
  ROULETTE
  SLOT
  RANDOM_PICKER
}

enum ParticipantSource {
  MANUAL
  CSV
  API
}

enum ExecutionStatus {
  PENDING
  VALIDATING
  IN_PROGRESS
  EMITTING_RESULT
  SUCCESS
  FAILED
  ABORTED
}

enum PaymentStatus {
  SUCCESS
  FAILED
  PENDING
}

enum ImportJobStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

model User {
  id                 String             @id @default(uuid()) @db.Uuid
  email              String             @unique @db.VarChar(255)
  passwordHash       String             @map("password_hash") @db.Text
  role               UserRole           @default(USER)
  subscriptionStatus SubscriptionStatus @default(EXPIRED) @map("subscription_status")
  isActive           Boolean            @default(true) @map("is_active")
  createdAt          DateTime           @default(now()) @map("created_at") @db.Timestamptz
  updatedAt          DateTime?          @updatedAt @map("updated_at") @db.Timestamptz
  deletedAt          DateTime?          @map("deleted_at") @db.Timestamptz

  sessions           Session[]
  subscriptions      Subscription[]
  usageMetrics       UsageMetric[]
  raffles            Raffle[]
  auditLogs          AuditLog[]

  @@map("users")
}

model Session {
  id               String    @id @default(uuid()) @db.Uuid
  userId           String    @map("user_id") @db.Uuid
  refreshTokenHash String    @map("refresh_token_hash") @db.Text
  expiresAt        DateTime  @map("expires_at") @db.Timestamptz
  revokedAt        DateTime? @map("revoked_at") @db.Timestamptz
  createdAt        DateTime  @default(now()) @map("created_at") @db.Timestamptz

  user             User      @relation(fields: [userId], references: [id])

  @@index([userId])
  @@map("sessions")
}

model Plan {
  id            String         @id @default(uuid()) @db.Uuid
  name          String         @db.VarChar(100)
  price         Decimal        @db.Decimal(10, 2)
  features      Json
  createdAt     DateTime       @default(now()) @map("created_at") @db.Timestamptz

  subscriptions Subscription[]

  @@map("plans")
}

model Subscription {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  planId    String    @map("plan_id") @db.Uuid
  startsAt  DateTime  @map("starts_at") @db.Timestamptz
  endsAt    DateTime  @map("ends_at") @db.Timestamptz
  isActive  Boolean   @default(true) @map("is_active")
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz

  user      User      @relation(fields: [userId], references: [id])
  plan      Plan      @relation(fields: [planId], references: [id])
  payments  Payment[]

  @@index([userId, isActive])
  @@index([planId])
  @@map("subscriptions")
}

model Payment {
  id                   String        @id @default(uuid()) @db.Uuid
  subscriptionId       String        @map("subscription_id") @db.Uuid
  transactionReference String        @map("transaction_reference") @db.VarChar(255)
  amount               Decimal       @db.Decimal(10, 2)
  currency             String        @db.VarChar(10)
  status               PaymentStatus @default(PENDING)
  gatewayResponse      Json?         @map("gateway_response")
  createdAt            DateTime      @default(now()) @map("created_at") @db.Timestamptz

  subscription         Subscription  @relation(fields: [subscriptionId], references: [id])

  @@unique([transactionReference])
  @@index([subscriptionId])
  @@map("payments")
}

model UsageMetric {
  id          String    @id @default(uuid()) @db.Uuid
  userId      String    @map("user_id") @db.Uuid
  metricType  String    @map("metric_type") @db.VarChar(50)
  metricValue Int       @default(0) @map("metric_value")
  periodStart DateTime? @map("period_start") @db.Timestamptz
  periodEnd   DateTime? @map("period_end") @db.Timestamptz

  user        User      @relation(fields: [userId], references: [id])

  @@index([userId, metricType])
  @@map("usage_metrics")
}

model Raffle {
  id            String        @id @default(uuid()) @db.Uuid
  userId        String        @map("user_id") @db.Uuid
  title         String        @db.VarChar(150)
  description   String?       @db.Text
  type          RaffleType
  state         RaffleState   @default(DRAFT)
  configuration Json?
  metrics       Json?
  publicToken   String?       @unique @map("public_token") @db.VarChar(255)
  isPublic      Boolean       @default(false) @map("is_public")
  createdAt     DateTime      @default(now()) @map("created_at") @db.Timestamptz
  updatedAt     DateTime?     @updatedAt @map("updated_at") @db.Timestamptz
  deletedAt     DateTime?     @map("deleted_at") @db.Timestamptz

  user          User          @relation(fields: [userId], references: [id])
  prizes        Prize[]
  participants  Participant[]
  importJobs    ImportJob[]
  executions    Execution[]

  @@index([userId, state])
  @@map("raffles")
}

model Prize {
  id          String         @id @default(uuid()) @db.Uuid
  raffleId    String         @map("raffle_id") @db.Uuid
  name        String         @db.VarChar(150)
  description String?        @db.Text
  quantity    Int            @default(1)
  createdAt   DateTime       @default(now()) @map("created_at") @db.Timestamptz

  raffle      Raffle         @relation(fields: [raffleId], references: [id])
  winners     ResultWinner[]

  @@index([raffleId])
  @@map("prizes")
}

model Participant {
  id         String            @id @default(uuid()) @db.Uuid
  raffleId   String            @map("raffle_id") @db.Uuid
  fullName   String            @map("full_name") @db.VarChar(150)
  identifier String            @db.VarChar(255)
  email      String?           @db.VarChar(255)
  source     ParticipantSource @default(MANUAL)
  metadata   Json?
  createdAt  DateTime          @default(now()) @map("created_at") @db.Timestamptz
  updatedAt  DateTime?         @updatedAt @map("updated_at") @db.Timestamptz
  deletedAt  DateTime?         @map("deleted_at") @db.Timestamptz

  raffle     Raffle            @relation(fields: [raffleId], references: [id])
  wins       ResultWinner[]

  @@unique([raffleId, identifier])
  @@index([raffleId])
  @@map("participants")
}

model ImportJob {
  id               String          @id @default(uuid()) @db.Uuid
  raffleId         String          @map("raffle_id") @db.Uuid
  filename         String          @db.VarChar(255)
  status           ImportJobStatus @default(PENDING)
  totalRecords     Int             @default(0) @map("total_records")
  processedRecords Int             @default(0) @map("processed_records")
  errors           Json?
  createdAt        DateTime        @default(now()) @map("created_at") @db.Timestamptz

  raffle           Raffle          @relation(fields: [raffleId], references: [id])

  @@index([raffleId])
  @@map("import_jobs")
}

model Execution {
  id          String           @id @default(uuid()) @db.Uuid
  raffleId    String           @map("raffle_id") @db.Uuid
  status      ExecutionStatus  @default(PENDING)
  seedHash    String?          @map("seed_hash") @db.Text
  durationMs  Int?             @map("duration_ms")
  startedAt   DateTime         @default(now()) @map("started_at") @db.Timestamptz
  finishedAt  DateTime?        @map("finished_at") @db.Timestamptz

  raffle      Raffle           @relation(fields: [raffleId], references: [id])
  result      Result?
  events      RealtimeEvent[]

  @@index([raffleId, status])
  @@map("executions")
}

model Result {
  id               String         @id @default(uuid()) @db.Uuid
  executionId      String         @unique @map("execution_id") @db.Uuid
  verificationHash String         @map("verification_hash") @db.Text
  createdAt        DateTime       @default(now()) @map("created_at") @db.Timestamptz

  execution        Execution      @relation(fields: [executionId], references: [id])
  winners          ResultWinner[]

  @@index([verificationHash])
  @@map("results")
}

model ResultWinner {
  id            String      @id @default(uuid()) @db.Uuid
  resultId      String      @map("result_id") @db.Uuid
  participantId String      @map("participant_id") @db.Uuid
  prizeId       String?     @map("prize_id") @db.Uuid
  position      Int         @default(1)
  createdAt     DateTime    @default(now()) @map("created_at") @db.Timestamptz

  result        Result      @relation(fields: [resultId], references: [id])
  participant   Participant @relation(fields: [participantId], references: [id])
  prize         Prize?      @relation(fields: [prizeId], references: [id])

  @@unique([resultId, position])
  @@unique([resultId, participantId])
  @@index([participantId])
  @@map("result_winners")
}

model AuditLog {
  id         String    @id @default(uuid()) @db.Uuid
  userId     String?   @map("user_id") @db.Uuid
  entityType String    @map("entity_type") @db.VarChar(100)
  entityId   String    @map("entity_id") @db.Uuid
  action     String    @db.VarChar(100)
  payload    Json?
  ipAddress  String?   @map("ip_address") @db.VarChar(100)
  userAgent  String?   @map("user_agent") @db.Text
  createdAt  DateTime  @default(now()) @map("created_at") @db.Timestamptz

  user       User?     @relation(fields: [userId], references: [id])

  @@index([entityType, entityId])
  @@index([userId])
  @@map("audit_logs")
}

model RealtimeEvent {
  id          String    @id @default(uuid()) @db.Uuid
  executionId String    @map("execution_id") @db.Uuid
  eventType   String    @map("event_type") @db.VarChar(100)
  payload     Json?
  createdAt   DateTime  @default(now()) @map("created_at") @db.Timestamptz

  execution   Execution @relation(fields: [executionId], references: [id])

  @@index([executionId, eventType])
  @@map("realtime_events")
}
