// =========================================================
// RANDOMFATES - DER FÍSICO
// PostgreSQL / Supabase / Prisma
// Compatible con dbdiagram.io
// =========================================================

Table users {
  id uuid [pk]
  
  email varchar(255) [unique, not null]
  password_hash text [not null]

  role varchar(30) [not null]
  subscription_status varchar(30) [not null]

  is_active boolean [default: true]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz
}

Table sessions {
  id uuid [pk]

  user_id uuid [not null, ref: > users.id]

  refresh_token_hash text [not null]

  expires_at timestamptz [not null]
  revoked_at timestamptz

  created_at timestamptz [default: `now()`]
}

Table plans {
  id uuid [pk]

  name varchar(100) [not null]
  price decimal(10,2) [not null]

  features jsonb [not null]

  created_at timestamptz [default: `now()`]
}

Table subscriptions {
  id uuid [pk]

  user_id uuid [not null, ref: > users.id]
  plan_id uuid [not null, ref: > plans.id]

  starts_at timestamptz [not null]
  ends_at timestamptz [not null]

  is_active boolean [default: true]

  created_at timestamptz [default: `now()`]
}

Table payments {
  id uuid [pk]

  subscription_id uuid [not null, ref: > subscriptions.id]

  transaction_reference varchar(255) [not null]
  
  amount decimal(10,2) [not null]
  currency varchar(10) [not null]

  status varchar(30) [not null]

  gateway_response jsonb

  created_at timestamptz [default: `now()`]
}

Table usage_metrics {
  id uuid [pk]

  user_id uuid [not null, ref: > users.id]

  metric_type varchar(50) [not null]
  metric_value integer [default: 0]

  period_start timestamptz
  period_end timestamptz
}

Table raffles {
  id uuid [pk]

  user_id uuid [not null, ref: > users.id]

  title varchar(150) [not null]
  description text

  type varchar(50) [not null]
  state varchar(50) [not null]

  configuration jsonb
  metrics jsonb

  public_token varchar(255) [unique]
  is_public boolean [default: false]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz
}

Table prizes {
  id uuid [pk]

  raffle_id uuid [not null, ref: > raffles.id]

  name varchar(150) [not null]
  description text

  quantity integer [default: 1]

  created_at timestamptz [default: `now()`]
}

Table participants {
  id uuid [pk]

  raffle_id uuid [not null, ref: > raffles.id]

  full_name varchar(150) [not null]

  identifier varchar(255) [not null]
  email varchar(255)

  source varchar(50) [not null]

  metadata jsonb

  created_at timestamptz [default: `now()`]
  updated_at timestamptz
  deleted_at timestamptz

  indexes {
    (raffle_id, identifier) [unique]
  }
}

Table import_jobs {
  id uuid [pk]

  raffle_id uuid [not null, ref: > raffles.id]

  filename varchar(255) [not null]

  status varchar(50) [not null]

  total_records integer [default: 0]
  processed_records integer [default: 0]

  errors jsonb

  created_at timestamptz [default: `now()`]
}

Table executions {
  id uuid [pk]

  raffle_id uuid [not null, ref: > raffles.id]

  status varchar(50) [not null]

  seed_hash text

  duration_ms integer

  started_at timestamptz [default: `now()`]
  finished_at timestamptz
}

Table results {
  id uuid [pk]

  execution_id uuid [not null, unique, ref: > executions.id]

  verification_hash text [not null]

  created_at timestamptz [default: `now()`]
}

Table result_winners {
  id uuid [pk]

  result_id uuid [not null, ref: > results.id]
  participant_id uuid [not null, ref: > participants.id]
  prize_id uuid [ref: > prizes.id]

  position integer [default: 1]

  created_at timestamptz [default: `now()`]
}

Table audit_logs {
  id uuid [pk]

  user_id uuid [ref: > users.id]

  entity_type varchar(100) [not null]
  entity_id uuid [not null]

  action varchar(100) [not null]

  payload jsonb

  ip_address varchar(100)
  user_agent text

  created_at timestamptz [default: `now()`]
}

Table realtime_events {
  id uuid [pk]

  execution_id uuid [not null, ref: > executions.id]

  event_type varchar(100) [not null]

  payload jsonb

  created_at timestamptz [default: `now()`]
}


